Fix numbers section on mobile, add more technologies

--- a/src/index.scss
+++ b/src/index.scss
@@ -99,7 +99,11 @@ h1, h2, h3, h4, h5, h6 {
     width: 20%;
   }
 
-  .col-4, .col-2 {
+  .col-4 {
+    width: 50%;
+  }
+
+  .col-2 {
     width: 100%;
   }
 
